Customization.html + css

--- a/BTH745_Website/flight.html
+++ b/BTH745_Website/flight.html
@@ -201,7 +201,7 @@
               <div>
                 <h3> Price: $650 </h3>
               </div>
-              <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
+              <div class="addCart"><a class="btn btn-primary" href="customization.html">Customize!</a> </div>
             </div>
           </div>
           <div class="row flightDiv">
@@ -230,7 +230,7 @@
               <div>
                 <h3> Price: $635</h3>
               </div>
-              <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
+              <div class="addCart"><a class="btn btn-primary" href="customization.html">Customize!</a> </div>
             </div>
           </div>
         </div>
