--- a/BTH745_Website/discover.html
+++ b/BTH745_Website/discover.html
@@ -71,7 +71,7 @@
       </div>
     </div>
   </a>
-  <a href="#">
+  <a href="asia_continent.html">
     <div class="py-5 asia" style="	background-image: url(assets/img/asia_2.jpg);	background-position: absolute;	background-size: 100%;	background-repeat: repeat;">
       <div class="container">
         <div class="row">
