--- a/BTH745_Website/africa_continent.html
+++ b/BTH745_Website/africa_continent.html
@@ -58,11 +58,11 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 text-center asiaHeader" style="">
+  <div class="py-5 text-center africaHeader" style="">
     <div class="container">
       <div class="row">
         <div class="mx-auto col-md-6">
-          <h1>Asia</h1>
+          <h1>Africa</h1>
           <p class="mb-4">Tell us where you want to go. We got a deal for you</p>
         </div>
       </div>
@@ -72,29 +72,29 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">China</h1>
+          <h1 class="display-4">Morocco</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/beijing.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/asilah.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Beijing</h5>
-                  <p>Description</p>
+                  <h5 class="m-0">Asilah </h5>
+                  <p> Description </p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/shanghai.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/marrakech.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Shanghai</h5>
+                  <h5 class="m-0">Marrakech </h5>
                   <p>Descriptions</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/xian.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/meknes.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Xi'an</h5>
-                  <p>Destop</p>
+                  <h5 class="m-0">Meknes </h5>
+                  <p>description&lt; </p>
                 </div>
               </div>
             </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
@@ -107,28 +107,22 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">Japan</h1>
+          <h1 class="display-4">Ethiopia</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel1">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/tokyo.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/gondar.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Tokyo</h5>
+                  <h5 class="m-0">Gondar </h5>
                   <p>Description</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/kyoto.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/danakil.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Kyoto</h5>
-                  <p>Description</p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/osaka.jpg">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Osaka</h5>
+                  <h5 class="m-0">Danakil</h5>
                   <p>Description</p>
                 </div>
               </div>
@@ -141,29 +135,29 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 text-center">
-          <h1 class="display-4">Viet Nam</h1>
+        <div class="col-md-12 text-center" style="">
+          <h1 class="display-4">Seychelles</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel2">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/hoian.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/seychelles_1.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Hoi An, Da Nang</h5>
+                  <h5 class="m-0">Beach</h5>
                   <p>Desc</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/phuquoc.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/seychelles_2.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Phu Quoc Island</h5>
+                  <h5 class="m-0">Beach</h5>
                   <p>Desc</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/halongbay.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/seychelles_3.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Ha Long Bay</h5>
+                  <h5 class="m-0">Beach</h5>
                   <p>Desc</p>
                 </div>
               </div>
