--- a/BTH745_Website/america_continent.html
+++ b/BTH745_Website/america_continent.html
@@ -58,11 +58,11 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 text-center asiaHeader" style="">
+  <div class="py-5 text-center americaHeader" style="">
     <div class="container">
       <div class="row">
         <div class="mx-auto col-md-6">
-          <h1>Asia</h1>
+          <h1>America</h1>
           <p class="mb-4">Tell us where you want to go. We got a deal for you</p>
         </div>
       </div>
@@ -72,28 +72,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">China</h1>
+          <h1 class="display-4">Canada</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/beijing.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/toronto.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Beijing</h5>
+                  <h5 class="m-0">Toronto</h5>
                   <p>Description</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/shanghai.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/vancouver.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Shanghai</h5>
+                  <h5 class="m-0">Vancouver</h5>
                   <p>Descriptions</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/xian.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/alberta.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Xi'an</h5>
+                  <h5 class="m-0">Alberta</h5>
                   <p>Destop</p>
                 </div>
               </div>
@@ -107,28 +107,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">Japan</h1>
+          <h1 class="display-4">United States</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel1">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/tokyo.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/newyork.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Tokyo</h5>
+                  <h5 class="m-0">New York</h5>
                   <p>Description</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/kyoto.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/lasvegas.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Kyoto</h5>
+                  <h5 class="m-0">Las Vegas</h5>
                   <p>Description</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/osaka.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/seattle.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Osaka</h5>
+                  <h5 class="m-0">Seattlee</h5>
                   <p>Description</p>
                 </div>
               </div>
@@ -142,28 +142,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">Viet Nam</h1>
+          <h1 class="display-4">Mexico</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel2">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/hoian.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/mexicocity.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Hoi An, Da Nang</h5>
+                  <h5 class="m-0">Mexico City</h5>
                   <p>Desc</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/phuquoc.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/tulum.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Phu Quoc Island</h5>
+                  <h5 class="m-0">Tulum</h5>
                   <p>Desc</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/halongbay.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/cancun.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Ha Long Bay</h5>
+                  <h5 class="m-0">Cancun</h5>
                   <p>Desc</p>
                 </div>
               </div>
