--- a/BTH745_Website/australia_continent.html
+++ b/BTH745_Website/australia_continent.html
@@ -5,7 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
   <link rel="stylesheet" href="./assets/css/now-ui-kit.css">
+  <link rel="stylesheet" href="assets/css/nucleo-icons.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/continents.css" type="text/css">
+  <script src="./assets/js/browser.js"></script>
+  <script src="./assets/js/parallax.js"></script>
 </head>
 
 <body>
@@ -53,57 +58,47 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 bg-dark" style="	background-image: url(assets/img/fog_1.jpg);	background-size: cover;	background-position: center top;	background-repeat: repeat; height:750px">
-    <div class="container" style="padding-top:150px">
-      <div class="row my-4">
-        <div class="mx-auto col-md-6 col-10 col-xl-4 px-4">
-          <div class="card bg-primary">
-            <div class="card-body text-center">
-              <div class="row mt-5">
-                <div class="col-md-12">
-                  <h5 class="mb-4">
-                    <b>SIGN IN</b></h5>
-                </div>
-              </div>
-              <div class="row mt-4 pt-2">
-                <div class="col">
-                  <form>
-                    <div class="form-group mb-2">
-                      <div class="input-group border-0">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text" id="basic-addon1">
-                            <i class="fa fa-user-circle fa-lg"></i>
-                          </span>
-                        </div>
-                        <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
-                      </div>
-                    </div>
-                    <div class="form-group mb-2">
-                      <div class="input-group border-0">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text" id="basic-addon1">
-                            <i class="fa fa-lock fa-lg"></i>
-                          </span>
-                        </div>
-                        <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Password">
-                      </div>
-                    </div>
-                    <button type="submit" class="btn mt-4 mb-3 btn-light rounded text-primary btn-lg">Log In</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
+  <div class="py-5 text-center australiaHeader" style="">
+    <div class="container">
+      <div class="row">
+        <div class="mx-auto col-md-6">
+          <h1>Australia</h1>
+          <p class="mb-4">Tell us where you want to go. We got a deal for you</p>
         </div>
       </div>
-      <div class="row text-center">
-        <div class="col">
-          <a class="btn rounded btn-lg btn-primary" href="signup.html">Sign Up Now!</a>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1 class="display-4">Australia</h1>
         </div>
       </div>
-      <div class="row text-center">
+      <div class="row">
         <div class="col-md-12">
-          <h4 class="text-danger"><span class="badge badge-pill badge-warning">!</span></h4>
+          <div class="carousel slide" data-ride="carousel" id="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/sydney.jpg">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Sydney</h5>
+                  <p>Description</p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/melbourne.jpg">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Melbourne</h5>
+                  <p>Descriptions</p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/goldcoast.jpg">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Gold Coast</h5>
+                  <p>Destop</p>
+                </div>
+              </div>
+            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
+          </div>
         </div>
       </div>
     </div>
