--- a/BTH745_Website/cart.html
+++ b/BTH745_Website/cart.html
@@ -2,124 +2,122 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
-    <link rel="stylesheet" href="./assets/css/cart.css">
-    <link rel="stylesheet" href="assets/css/now-ui-kit.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/nucleo-icons.css" type="text/css">
-    
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
+  <link rel="stylesheet" href="./assets/css/cart.css">
+  <link rel="stylesheet" href="assets/css/now-ui-kit.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/nucleo-icons.css" type="text/css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-primary navbar-dark parallax sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="main.html">LUX TRAVEL</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarPrimaryContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse text-center justify-content-end" id="navbarPrimaryContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item mx-1">
-                        <a class="nav-link = align-items-center d-flex" href="discover.html">
-                            <i class="fa fa-globe fa-fw fa-2x mr-2"></i> DISCOVER</a>
-                    </li>
-                    <li class="nav-item mx-1">
-                        <a class="nav-link = align-items-center d-flex" href="flight.html">
-                            <i class="fa fa-plane fa-5 fa-fw fa-2x mr-2"></i> FLIGHTS</a>
-                    </li>
-                    <li class="nav-item mx-1">
-                        <a class="nav-link = align-items-center d-flex" href="hotel.html">
-                            <i class="fa fa-bed fa-fw fa-2x mr-2"></i> HOTEL</a>
-                    </li>
-                    <li class="nav-item mx-1">
-                        <a class="nav-link align-items-center d-flex" href="aboutus.html">
-                            <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
-                    </li>
-                    <li class="nav-item mx-1">
-                        <a class="nav-link align-items-center d-flex" href="aboutus.html">
-                            <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
-                    </li>
-                    <li class="nav-item mx-1">
-                        <a class="nav-link = align-items-center d-flex" href="signin.html">
-                            <i class="fa fa-user-circle-o fa-fw fa-2x mr-2"></i> &nbsp; SIGN UP / LOG IN</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</body>
-
-<div class="py-5 text-center cartHeader">
+  <nav class="navbar navbar-expand-md bg-primary navbar-dark parallax sticky-top">
     <div class="container">
-        <div class="row">
-            <div class="mx-auto col-md-6">
-                <h1>Cart</h1>
-                <p class="mb-4"></p>
-            </div>
-        </div>
+      <a class="navbar-brand" href="main.html">LUX TRAVEL</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse text-center justify-content-end" id="navbarPrimaryContent">
+        <ul class="navbar-nav">
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="discover.html">
+              <i class="fa fa-globe fa-fw fa-2x mr-2"></i> DISCOVER</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="flight.html">
+              <i class="fa fa-plane fa-5 fa-fw fa-2x mr-2"></i> FLIGHTS</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="hotel.html">
+              <i class="fa fa-bed fa-fw fa-2x mr-2"></i> HOTEL</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="tripPlanner.html">
+              <i class="fa fa-suitcase fa-fw fa-2x mr-2"></i> TRIP PLANNER</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+              <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+              <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="contactus.html">
+              <i class="fa fa-phone-square fa-fw fa-2x  mr-2"></i>&nbsp;CONTACT US</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="signin.html">
+              <i class="fa fa-user-circle-o fa-fw fa-2x mr-2"></i> &nbsp; SIGN UP / LOG IN</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</div>
-
-<div class="container my-4">
+  </nav>
+  <div class="py-5 text-center cartHeader">
+    <div class="container">
+      <div class="row">
+        <div class="mx-auto col-md-6">
+          <h1>Cart</h1>
+          <p class="mb-4"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container my-4">
     <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th>Type</th>
-                <th>Details</th>
-                <th></th>
-                <!--edit-->
-                <th></th>
-                <!--delete-->
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Flight</td>
-                <td>1 Adult, Economy, Toronto Pearson Airport to Vancouver International Airport and return, June 20,
-                    2020 - July 20, 2020</td>
-                <td><a class="btn btn-primary" href="customization.html">Edit</a></td>
-                <td><a class="btn btn-warning">Delete</a></td>
-            </tr>
-        </tbody>
+      <thead class="thead-dark">
+        <tr>
+          <th>Type</th>
+          <th>Details</th>
+          <th></th>
+          <!--edit-->
+          <th></th>
+          <!--delete-->
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Flight</td>
+          <td>1 Adult, Economy, Toronto Pearson Airport to Vancouver International Airport and return, June 20, 2020 - July 20, 2020</td>
+          <td><a class="btn btn-primary" href="customization.html">Edit</a></td>
+          <td><a class="btn btn-warning">Delete</a></td>
+        </tr>
+      </tbody>
     </table>
-</div>
-
-<div class="container">
+  </div>
+  <div class="container">
     <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#confirmationModal">Checkout</a>
-
-</div>
-
-<div class="modal fade" id="confirmationModal">
+  </div>
+  <div class="modal fade" id="confirmationModal">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header pb-0">
-                <h4 class="modal-title text-dark mx-auto">
-                    <b>Checkout completed!</b>
-                </h4>
-                <button type="button" class="close text-danger pt-4 ml-0" data-dismiss="modal">
-                    <span>
-                        <i class="now-ui-icons ui-1_simple-remove lg"></i>
-                    </span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p class="m-0">You can safely close this window.</p>
-            </div>
-            <div class="modal-footer d-flex flex-row justify-content-between">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
+      <div class="modal-content">
+        <div class="modal-header pb-0">
+          <h4 class="modal-title text-dark mx-auto">
+            <b>Checkout completed!</b>
+          </h4>
+          <button type="button" class="close text-danger pt-4 ml-0" data-dismiss="modal">
+            <span>
+              <i class="now-ui-icons ui-1_simple-remove lg"></i>
+            </span>
+          </button>
         </div>
+        <div class="modal-body">
+          <p class="m-0">You can safely close this window.</p>
+        </div>
+        <div class="modal-footer d-flex flex-row justify-content-between">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="assets/js/parallax.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
-
+  </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="assets/js/parallax.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
+</body>
 
 </html>
