--- a/BTH745_Website/discover.html
+++ b/BTH745_Website/discover.html
@@ -13,14 +13,14 @@
 <body style="">
   <nav class="navbar navbar-expand-md bg-primary navbar-dark parallax sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="main.html">PRIMARY COLOR</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent" style="">
+      <a class="navbar-brand" href="main.html">LUX TRAVEL</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbarPrimaryContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-1">
-            <a class="nav-link = align-items-center d-flex active" href="discover.html">
+            <a class="nav-link = align-items-center d-flex" href="discover.html">
               <i class="fa fa-globe fa-fw fa-2x mr-2"></i> DISCOVER</a>
           </li>
           <li class="nav-item mx-1">
@@ -32,8 +32,20 @@
               <i class="fa fa-bed fa-fw fa-2x mr-2"></i> HOTEL</a>
           </li>
           <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="tripPlanner.html">
+              <i class="fa fa-suitcase fa-fw fa-2x mr-2"></i> TRIP PLANNER</a>
+          </li>
+          <li class="nav-item mx-1">
             <a class="nav-link align-items-center d-flex" href="aboutus.html">
               <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+              <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="contactus.html">
+              <i class="fa fa-phone-square fa-fw fa-2x  mr-2"></i>&nbsp;CONTACT US</a>
           </li>
           <li class="nav-item mx-1">
             <a class="nav-link = align-items-center d-flex" href="signin.html">
@@ -43,7 +55,7 @@
       </div>
     </div>
   </nav>
-  <a href="#">
+  <a href="europe_continent.html">
     <div class="py-5" style="	background-image: url(&quot;assets/img/europe_1.jpg&quot;);	background-position: absolute;	background-size: 100%;	background-repeat: repeat;">
       <div class="container">
         <div class="row">
@@ -57,7 +69,7 @@
       </div>
     </div>
   </a>
-  <a href="#">
+  <a href="america_continent.html">
     <div class="py-5" style="	background-image: url(assets/img/America.jpg);	background-position: absolute;	background-size: 100%;	background-repeat: repeat;">
       <div class="container">
         <div class="row">
@@ -85,7 +97,7 @@
       </div>
     </div>
   </a>
-  <a href="#">
+  <a href="australia_continent.html">
     <div class="py-5" style="	background-image: url(assets/img/australia.jpg);	background-position: absolute;	background-size: 100%;	background-repeat: repeat;">
       <div class="container">
         <div class="row">
@@ -99,7 +111,7 @@
       </div>
     </div>
   </a>
-  <a href="#">
+  <a href="africa_continent.html">
     <div class="py-5 africa" style="	background-image: url(assets/img/africa_1.jpg);	background-position: absolute;	background-size: 100%;	background-repeat: repeat;">
       <div class="container">
         <div class="row">
