--- a/BTH745_Website/europe_continent.html
+++ b/BTH745_Website/europe_continent.html
@@ -58,11 +58,11 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 text-center asiaHeader" style="">
+  <div class="py-5 text-center europeHeader" style="">
     <div class="container">
       <div class="row">
         <div class="mx-auto col-md-6">
-          <h1>Asia</h1>
+          <h1>Europe</h1>
           <p class="mb-4">Tell us where you want to go. We got a deal for you</p>
         </div>
       </div>
@@ -72,29 +72,29 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">China</h1>
+          <h1 class="display-4">Italy</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/beijing.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/rome.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Beijing</h5>
+                  <h5 class="m-0">Rome</h5>
                   <p>Description</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/shanghai.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/milan.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Shanghai</h5>
+                  <h5 class="m-0">Milan</h5>
                   <p>Descriptions</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/xian.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/venice.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Xi'an</h5>
-                  <p>Destop</p>
+                  <h5 class="m-0">Venice</h5>
+                  <p>Description</p>
                 </div>
               </div>
             </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
@@ -107,28 +107,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">Japan</h1>
+          <h1 class="display-4">France</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel1">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/tokyo.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/paris.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Tokyo</h5>
+                  <h5 class="m-0">Paris</h5>
                   <p>Description</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/kyoto.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/nice.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Kyoto</h5>
+                  <h5 class="m-0">Nice</h5>
                   <p>Description</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/osaka.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/riviera.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Osaka</h5>
+                  <h5 class="m-0">Riviera</h5>
                   <p>Description</p>
                 </div>
               </div>
@@ -142,28 +142,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="display-4">Viet Nam</h1>
+          <h1 class="display-4">Spain</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel2">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/hoian.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="assets/img/barcelona.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Hoi An, Da Nang</h5>
+                  <h5 class="m-0">Barcelona</h5>
                   <p>Desc</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/phuquoc.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/madrid.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Phu Quoc Island</h5>
+                  <h5 class="m-0">Madrid</h5>
                   <p>Desc</p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/halongbay.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/img/granada.jpg">
                 <div class="carousel-caption">
-                  <h5 class="m-0">Ha Long Bay</h5>
+                  <h5 class="m-0">Granada</h5>
                   <p>Desc</p>
                 </div>
               </div>
