--- a/BTH745_Website/profile.html
+++ b/BTH745_Website/profile.html
@@ -19,8 +19,8 @@
 <body>
   <nav class="navbar navbar-expand-md bg-primary navbar-dark parallax sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="main.html">PRIMARY COLOR</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent" style="">
+      <a class="navbar-brand" href="main.html">LUX TRAVEL</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbarPrimaryContent">
@@ -38,97 +38,118 @@
               <i class="fa fa-bed fa-fw fa-2x mr-2"></i> HOTEL</a>
           </li>
           <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="tripPlanner.html">
+              <i class="fa fa-suitcase fa-fw fa-2x mr-2"></i> TRIP PLANNER</a>
+          </li>
+          <li class="nav-item mx-1">
             <a class="nav-link align-items-center d-flex" href="aboutus.html">
               <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
           </li>
           <li class="nav-item mx-1">
-            <a class="nav-link = align-items-center d-flex" href="signin.html">
-              <i class="fa fa-user-circle-o fa-fw fa-2x mr-2"></i> &nbsp;Hello, DustyTheCutie</a>
+            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+              <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
           </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="content">
-    <div class="row">
-      <div class="col-md-7">
-        <div class="card profileCard">
-          <div class="card-header">
-            <h5 class="title profileTitle">Edit Profile</h5>
-          </div>
-          <div class="card-body">
-            <form>
-              <div class="row">
-                <div class="col-md-8 pr-1">
-                  <div class="form-group">
-                    <label>Company (disabled)</label>
-                    <input type="text" class="form-control" placeholder="Company" value="Creative Code Inc." disabled="">
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="contactus.html">
+              <i class="fa fa-phone-square fa-fw fa-2x  mr-2"></i>&nbsp;CONTACT US</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="#">
+              <i class="fa fa-user-circle-o fa-fw fa-2x mr-2"></i> &nbsp; HELLO, DUSTYTHECUTIE </a></li><a class="nav-link = align-items-center d-flex" href="#">
+          </a>
+        </ul><a class="nav-link = align-items-center d-flex" href="#">
+        </a>
+      </div><a class="nav-link = align-items-center d-flex" href="#">
+      </a>
+    </div><a class="nav-link = align-items-center d-flex" href="#">
+    </a>
+  </nav><a class="nav-link = align-items-center d-flex" href="#">
+  </a>
+  <div class="content"><a class="nav-link = align-items-center d-flex" href="#">
+    </a>
+    <div class="row"><a class="nav-link = align-items-center d-flex" href="#">
+      </a>
+      <div class="col-md-7"><a class="nav-link = align-items-center d-flex" href="#">
+        </a>
+        <div class="card profileCard"><a class="nav-link = align-items-center d-flex" href="#">
+            <div class="card-header">
+              <h5 class="title profileTitle">Edit Profile</h5>
+            </div>
+          </a>
+          <div class="card-body"><a class="nav-link = align-items-center d-flex" href="#">
+              <form>
+                <div class="row">
+                  <div class="col-md-8 pr-1">
+                    <div class="form-group">
+                      <label>Company (disabled)</label>
+                      <input type="text" class="form-control" placeholder="Company" value="Creative Code Inc." disabled="">
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-md-4 pr-1">
-                  <div class="form-group">
-                    <label>Username</label>
-                    <input type="text" class="form-control" placeholder="Company" value="Mike">
+                <div class="row">
+                  <div class="col-md-4 pr-1">
+                    <div class="form-group">
+                      <label>Username</label>
+                      <input type="text" class="form-control" placeholder="Company" value="Mike">
+                    </div>
+                  </div>
+                  <div class="col-md-4 pl-1">
+                    <div class="form-group">
+                      <label>Email Address</label>
+                      <input type="text" class="form-control" placeholder="dustythecutie@gmail.com" value="dustythecutie@gmail.com">
+                    </div>
+                  </div>
+                  <div class="col-md-4 pl-1">
+                    <div class="form-group">
+                      <label>Phone Number</label>
+                      <input type="text" class="form-control" placeholder="123456789" value="123456789">
+                    </div>
                   </div>
                 </div>
-                <div class="col-md-4 pl-1">
-                  <div class="form-group">
-                    <label>Email Address</label>
-                    <input type="text" class="form-control" placeholder="dustythecutie@gmail.com" value="dustythecutie@gmail.com">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Bank Transaction #</label>
+                      <input type="text" class="form-control" placeholder="Bank Transaction #" value="4505 5520 4879 5555">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label>Industry</label>
+                      <input type="text" class="form-control" placeholder="Industry" value="Banking">
+                    </div>
                   </div>
                 </div>
-                <div class="col-md-4 pl-1">
-                  <div class="form-group">
-                    <label>Phone Number</label>
-                    <input type="text" class="form-control" placeholder="123456789" value="123456789">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label>Address</label>
+                      <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label>Bank Transaction #</label>
-                    <input type="text" class="form-control" placeholder="Bank Transaction #" value="4505 5520 4879 5555">
+                <div class="row">
+                  <div class="col-md-4 pr-1">
+                    <div class="form-group">
+                      <label>City</label>
+                      <input type="text" class="form-control" placeholder="City" value="Mike">
+                    </div>
+                  </div>
+                  <div class="col-md-4 px-1">
+                    <div class="form-group">
+                      <label>Country</label>
+                      <input type="text" class="form-control" placeholder="Country" value="Andrew">
+                    </div>
+                  </div>
+                  <div class="col-md-4 pl-1">
+                    <div class="form-group">
+                      <label>Postal Code</label>
+                      <input type="number" class="form-control" placeholder="ZIP Code">
+                    </div>
                   </div>
                 </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label>Industry</label>
-                    <input type="text" class="form-control" placeholder="Industry" value="Banking">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <label>Address</label>
-                    <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-4 pr-1">
-                  <div class="form-group">
-                    <label>City</label>
-                    <input type="text" class="form-control" placeholder="City" value="Mike">
-                  </div>
-                </div>
-                <div class="col-md-4 px-1">
-                  <div class="form-group">
-                    <label>Country</label>
-                    <input type="text" class="form-control" placeholder="Country" value="Andrew">
-                  </div>
-                </div>
-                <div class="col-md-4 pl-1">
-                  <div class="form-group">
-                    <label>Postal Code</label>
-                    <input type="number" class="form-control" placeholder="ZIP Code">
-                  </div>
-                </div>
-              </div>
-            </form><a class="btn btn-primary" href="#">Update Information</a>
+              </form>
+            </a><a class="btn btn-primary" href="#">Update Information</a>
           </div>
         </div>
       </div>
