--- a/BTH745_Website/signup.html
+++ b/BTH745_Website/signup.html
@@ -9,14 +9,46 @@
 </head>
 
 <body>
-  <nav class="parallax navbar navbar-expand-md fixed-top bg-dark navbar-dark" style="background-position: 0px 753.733%;">
-    <div class="container justify-content-center"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar9">
+  <nav class="navbar navbar-expand-md bg-primary navbar-dark parallax sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="main.html">LUX TRAVEL</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse text-center justify-content-center" id="navbar9">
+      <div class="collapse navbar-collapse text-center justify-content-end" id="navbarPrimaryContent">
         <ul class="navbar-nav">
-          <li class="nav-item mx-2"> <a class="nav-link navbar-brand mr-0 text-white" href="main.html"><i class="fa d-inline fa-lg fa-stop-circle-o"></i>
-              <b> BRAND</b></a> </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="discover.html">
+              <i class="fa fa-globe fa-fw fa-2x mr-2"></i> DISCOVER</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="flight.html">
+              <i class="fa fa-plane fa-5 fa-fw fa-2x mr-2"></i> FLIGHTS</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="hotel.html">
+              <i class="fa fa-bed fa-fw fa-2x mr-2"></i> HOTEL</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="tripPlanner.html">
+              <i class="fa fa-suitcase fa-fw fa-2x mr-2"></i> TRIP PLANNER</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+              <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+              <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="contactus.html">
+              <i class="fa fa-phone-square fa-fw fa-2x  mr-2"></i>&nbsp;CONTACT US</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="signin.html">
+              <i class="fa fa-user-circle-o fa-fw fa-2x mr-2"></i> &nbsp; SIGN UP / LOG IN</a>
+          </li>
         </ul>
       </div>
     </div>
