--- a/BTH745_Website/tripPlanner.html
+++ b/BTH745_Website/tripPlanner.html
@@ -16,8 +16,8 @@
 <body>
   <nav class="navbar navbar-expand-md bg-primary navbar-dark parallax sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="main.html">PRIMARY COLOR</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent" style="">
+      <a class="navbar-brand" href="main.html">LUX TRAVEL</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarPrimaryContent">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbarPrimaryContent">
@@ -35,8 +35,20 @@
               <i class="fa fa-bed fa-fw fa-2x mr-2"></i> HOTEL</a>
           </li>
           <li class="nav-item mx-1">
+            <a class="nav-link = align-items-center d-flex" href="tripPlanner.html">
+              <i class="fa fa-suitcase fa-fw fa-2x mr-2"></i> TRIP PLANNER</a>
+          </li>
+          <li class="nav-item mx-1">
             <a class="nav-link align-items-center d-flex" href="aboutus.html">
               <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+              <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="nav-link align-items-center d-flex" href="contactus.html">
+              <i class="fa fa-phone-square fa-fw fa-2x  mr-2"></i>&nbsp;CONTACT US</a>
           </li>
           <li class="nav-item mx-1">
             <a class="nav-link = align-items-center d-flex" href="signin.html">
