--- a/BTH745_Website/cart.html
+++ b/BTH745_Website/cart.html
@@ -85,6 +85,12 @@
           <td><a class="btn btn-primary" href="customization.html">Edit</a></td>
           <td><a class="btn btn-warning">Delete</a></td>
         </tr>
+        <tr>
+          <td>Hotel</td>
+          <td>Address : 1234 Islington Avenue, Vancouver, BC, Canada, Price : $150 / Day</td>
+          <td><a class="btn btn-primary" href="#" >Edit</a></td>
+          <td><a class="btn btn-warning">Delete</a></td>
+        </tr>
       </tbody>
     </table>
   </div>
