--- a/BTH745_Website/tripPlanner.html
+++ b/BTH745_Website/tripPlanner.html
@@ -97,7 +97,7 @@
                         <div class="form-row">
                           <div class="form-group col-md-12">
                             <label>Location</label>
-                            <input type="email" class="form-control" id="form23" placeholder="Email*"> </div>
+                            <input type="text" class="form-control" id="form23" placeholder="Click on search to see all results!"> </div>
                         </div>
                       </form>
                       <a href="#locationList">
@@ -281,7 +281,7 @@
                     <div>
                       <h3> Price: $150 / Day </h3>
                     </div>
-                    <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
+                    <div class="addCart"><a class="btn btn-primary" href="cart.html">Add Ticket to Cart</a> </div>
                   </div>
                 </div>
                 <div class="row hotelDiv">
@@ -301,7 +301,7 @@
                     <div>
                       <h3> Price: $200 / Day</h3>
                     </div>
-                    <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
+                    <div class="addCart"><a class="btn btn-primary" href="cart.html">Add Ticket to Cart</a> </div>
                   </div>
                 </div>
               </div>
