update hotel booking

--- a/BTH745_Website/hotel.html
+++ b/BTH745_Website/hotel.html
@@ -135,40 +135,7 @@
             </ul>
           </div>
           <div>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-              <span>Airways</span>
-            </h6>
             <ul class="nav flex-column mb-2">
-              <li class="nav-item navSide">
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">All</label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Air Canada </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Westjet </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Air North </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Canadian North </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Swoop </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Westjet </label>
-                </div>
-              </li>
             </ul>
           </div>
         </div>
@@ -182,25 +149,16 @@
             <div style="position:absolute;width:200%;height:200%;left:0; top:0"></div>
           </div>
         </div>
-        <h2>Flight List</h2>
-        <div class="container">
-          <div class="row flightDiv">
-            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
+        <h2>Hotel List</h2>
+        <div class="container tripPlannerHotel" id="hotelList" style="">
+          <div class="row hotelDiv">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel1.jpg" width="250px" height="250px"></div>
             <div class="col-md-6">
               <div>
-                <h3> Air Canada - 2 Ways</h3>
+                <h3> Galaxy Hotel</h3>
               </div>
               <div>
-                <label>From: Toronto</label>
-              </div>
-              <div>
-                <label>To: Vancouver</label>
-              </div>
-              <div>
-                <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
-              </div>
-              <div>
-                <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+                <label>Address : 1234 Islington Avenue, Vancouver, BC, Canada</label>
               </div>
               <div>
                 <label><a href="#">Read Review</a></label>
@@ -208,28 +166,19 @@
             </div>
             <div class="col-md-4" style="text-align: right;">
               <div>
-                <h3> Price: $650 </h3>
+                <h3> Price: $150 / Day </h3>
               </div>
-              <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
+              <div class="addCart"><a class="btn btn-primary" href="cart.html">Add Ticket to Cart</a> </div>
             </div>
           </div>
-          <div class="row flightDiv">
-            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/westjet.png" width="250px" height="250px"></div>
+          <div class="row hotelDiv">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel2.jpg" width="250px" height="250px"></div>
             <div class="col-md-6">
               <div>
-                <h3> Westjet - 2 Ways</h3>
+                <h3> Albert Hotel</h3>
               </div>
               <div>
-                <label>From: Toronto</label>
-              </div>
-              <div>
-                <label>To: Vancouver</label>
-              </div>
-              <div>
-                <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
-              </div>
-              <div>
-                <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+                <label>Address: 1 School Avenue, Vancouver, BC, Canada</label>
               </div>
               <div>
                 <label><a href="#">Read Review</a></label>
@@ -237,9 +186,9 @@
             </div>
             <div class="col-md-4" style="text-align: right;">
               <div>
-                <h3> Price: $635</h3>
+                <h3> Price: $200 / Day</h3>
               </div>
-              <div class="addCart"><a class="btn btn-primary" href="#">Add Ticket to Cart</a> </div>
+              <div class="addCart"><a class="btn btn-primary" href="cart.html">Add Ticket to Cart</a> </div>
             </div>
           </div>
         </div>
