--- a/BTH745_Website/tripPlanner.html
+++ b/BTH745_Website/tripPlanner.html
@@ -230,7 +230,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="tabthree" role="tabpanel">
+            <div class="tab-pane fade" id="tabthree" role="tabpanel" style="">
               <div class="py-5 text-center text-white" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(https://static.pingendo.com/cover-bubble-dark.svg);  background-position: center center, center center;  background-size: cover, cover;  background-repeat: repeat, repeat;">
                 <div class="container">
                   <div class="row">
