--- a/BTH745_Website/flight.html
+++ b/BTH745_Website/flight.html
@@ -213,7 +213,7 @@
               <div>
                 <h3> Price: $650 </h3>
               </div>
-              <div class="addCart"><a class="btn btn-primary" href="customization.html">Customize!</a> </div>
+              <div class="addCart"><a class="btn btn-primary" href="customization.html">Customization</a> </div>
             </div>
           </div>
           <div class="row flightDiv">
