--- a/BTH745_Website/main.html
+++ b/BTH745_Website/main.html
@@ -62,12 +62,12 @@
         <div class="col-lg-8 col-md-12 mx-auto">
           <h1 class="mb-4 display-2"><b>Lux Travel</b></h1>
           <p class="lead mb-5">Our mission is to provide anything you need for your trip.<br><br>We assist almost everything.<br></p>
-          <a href="#" class="btn btn-lg btn-primary">Find our more about us </a>
+          <a href="#dis" class="btn btn-lg btn-primary">Find our more about us </a>
         </div>
       </div>
     </div>
   </div>
-  <div class="py-5 text-center align-items-center d-flex" style="background-image: url('./assets/img/night.jpg'); background-size: 100%; height:650px">
+  <div class="py-5 text-center align-items-center d-flex" style="background-image: url('./assets/img/night.jpg'); background-size: 100%; height:650px" id="dis">
     <div class="container py-5">
       <div class="row" style="">
         <div class="col-md-8 mx-auto" style="color:white; text-align:left"> <i class="fa fa-globe fa-lg fa-5x "></i>
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto" style="text-align: right"> <i class="fa fa-plane fa-5 fa-lg fa-5x"></i>
           <h1 class="display-3 mb-4">Flights</h1>
-          <p class="lead mb-5">Cheap. Comfortable. Easy. Our ticket booking system help you to find the earliest with most affordable price. Just pick your destination and desired date. We will take care of the rest.</p> <a href="#" class="btn btn-lg btn-primary mx-1" style="">Pick Flight</a>
+          <p class="lead mb-5">Cheap. Comfortable. Easy. Our ticket booking system help you to find the earliest with most affordable price. Just pick your destination and desired date. We will take care of the rest.</p> <a href="flight.html" class="btn btn-lg btn-primary mx-1" style="">Pick Flight</a>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto"> <i class="fa fa-bed fa-fw fa-5 fa-lg fa-5x"></i>
           <h1 class="display-3 mb-4">Hotel</h1>
-          <p class="lead mb-5">Your comfortable is at our best interest. With connections with over thousands of hotels, resorts or manors all around the world. We are confident that we can help our customers to find the best place to stay during travelling.&nbsp; &nbsp;</p> <a href="#" class="btn btn-lg btn-primary mx-1">Search Hotels</a>
+          <p class="lead mb-5">Your comfortable is at our best interest. With connections with over thousands of hotels, resorts or manors all around the world. We are confident that we can help our customers to find the best place to stay during travelling.&nbsp; &nbsp;</p> <a href="hotel.html" class="btn btn-lg btn-primary mx-1">Search Hotels</a>
         </div>
       </div>
     </div>
@@ -104,16 +104,12 @@
           <h5> <b>Main</b> </h5>
           <ul class="list-unstyled">
             <li> <a href="#">Home</a> </li>
-            <li> <a href="#">Features</a> </li>
-            <li> <a href="#">Pricing</a> </li>
           </ul>
         </div>
         <div class="col-lg-3 col-6 p-3">
           <h5> <b>Others</b> </h5>
           <ul class="list-unstyled">
-            <li> <a href="#">FAQ</a> </li>
-            <li> <a href="#">Resources</a> </li>
-            <li> <a href="#">Career</a> </li>
+            <li> <a href="faq.html">FAQ</a> </li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-6 p-3">
