--- a/BTH745_Website/tripPlanner.html
+++ b/BTH745_Website/tripPlanner.html
@@ -75,10 +75,10 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
           <ul class="nav nav-tabs">
-            <li class="nav-item text-center"> <a href="" class="nav-link" data-toggle="pill" data-target="#tabone"><i class="fa Example of thumb-tack fa-thumb-tack"></i> Step 1</a> </li>
+            <li class="nav-item text-center"> <a href="" class="nav-link active show" data-toggle="pill" data-target="#tabone"><i class="fa Example of thumb-tack fa-thumb-tack"></i> Step 1</a> </li>
             <li class="nav-item"> <a href="" class="nav-link" data-toggle="pill" data-target="#tabtwo" disabled=""><i class="fa fa-fighter-jet"></i> Step 2</a> </li>
             <li class="nav-item"> <a class="nav-link" href="" data-toggle="pill" data-target="#tabthree"><i class="fa  fa-hotel"></i> Tab 3</a> </li>
-            <li class="nav-item"> <a href="" class="nav-link active" data-toggle="pill" data-target="#tabfour"><i class="fa  fa-check-circle-o"></i> Finalize Cart</a> </li>
+            <li class="nav-item"> <a href="" class="nav-link" data-toggle="pill" data-target="#tabfour"><i class="fa  fa-check-circle-o"></i> Finalize Cart</a> </li>
           </ul>
         </div>
         <div class="col-md-3"></div>
