--- a/BTH745_Website/tripPlanner.html
+++ b/BTH745_Website/tripPlanner.html
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="tab-content mt-2">
-            <div class="tab-pane fade" id="tabone" role="tabpanel">
+            <div class="tab-pane fade active show" id="tabone" role="tabpanel">
               <div class="py-5 text-center text-white" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(https://static.pingendo.com/cover-bubble-dark.svg);  background-position: center center, center center;  background-size: cover, cover;  background-repeat: repeat, repeat;">
                 <div class="container">
                   <div class="row">
@@ -349,7 +349,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade active show" id="tabfour" role="tabpanel" style="">
+            <div class="tab-pane fade" id="tabfour" role="tabpanel" style="">
               <div class="container my-4">
                 <table class="table">
                   <thead class="thead-dark">
